--- a/InCallUI/res/values-km-rKH/strings.xml
+++ b/InCallUI/res/values-km-rKH/strings.xml
@@ -68,6 +68,8 @@
     <string name="notification_voicemail_no_vm_number" msgid="760963466895609716">"មិន​ស្គាល់​ចំនួន​សារ​ជា​សំឡេង"</string>
     <string name="notification_network_selection_title" msgid="4224455487793492772">"គ្មាន​សេវា"</string>
     <string name="notification_network_selection_text" msgid="2607085729661923269">"បណ្ដាញ​ដែល​បាន​ជ្រើស ( <xliff:g id="OPERATOR_NAME">%s</xliff:g> ) មិន​អាច​ប្រើ​បាន​ទេ"</string>
+    <!-- no translation found for notification_action_answer (6700362365135365143) -->
+    <skip />
     <string name="notification_action_end_call" msgid="6069460915123531620">"បញ្ចប់​ការ​សន្ទនា"</string>
     <string name="notification_action_answer_video" msgid="7809271910870211729">"វីដេអូ"</string>
     <string name="notification_action_answer_voice" msgid="1770796916369437773">"សំឡេង"</string>
