--- a/InCallUI/res/values-ar/strings.xml
+++ b/InCallUI/res/values-ar/strings.xml
@@ -68,6 +68,7 @@
     <string name="notification_voicemail_no_vm_number" msgid="760963466895609716">"رقم البريد الصوتي غير معروف"</string>
     <string name="notification_network_selection_title" msgid="4224455487793492772">"لا خدمة"</string>
     <string name="notification_network_selection_text" msgid="2607085729661923269">"الشبكة المحددة (<xliff:g id="OPERATOR_NAME">%s</xliff:g>) غير متاحة"</string>
+    <string name="notification_action_answer" msgid="6700362365135365143">"الرد"</string>
     <string name="notification_action_end_call" msgid="6069460915123531620">"قطع الاتصال"</string>
     <string name="notification_action_answer_video" msgid="7809271910870211729">"فيديو"</string>
     <string name="notification_action_answer_voice" msgid="1770796916369437773">"الصوت"</string>
