--- a/InCallUI/res/values-ca/strings.xml
+++ b/InCallUI/res/values-ca/strings.xml
@@ -68,6 +68,7 @@
     <string name="notification_voicemail_no_vm_number" msgid="760963466895609716">"Número del correu de veu desconegut"</string>
     <string name="notification_network_selection_title" msgid="4224455487793492772">"Sense servei"</string>
     <string name="notification_network_selection_text" msgid="2607085729661923269">"La xarxa seleccionada (<xliff:g id="OPERATOR_NAME">%s</xliff:g>) no està disponible"</string>
+    <string name="notification_action_answer" msgid="6700362365135365143">"Respon"</string>
     <string name="notification_action_end_call" msgid="6069460915123531620">"Penja"</string>
     <string name="notification_action_answer_video" msgid="7809271910870211729">"Vídeo"</string>
     <string name="notification_action_answer_voice" msgid="1770796916369437773">"Veu"</string>
