--- a/InCallUI/res/values-is-rIS/strings.xml
+++ b/InCallUI/res/values-is-rIS/strings.xml
@@ -22,25 +22,6 @@
     <string name="unknown" msgid="6878797917991465859">"Óþekkt"</string>
     <string name="private_num" msgid="6713286113000232309">"Leyninúmer"</string>
     <string name="payphone" msgid="1931775086311769314">"Almenningssími"</string>
-    <string name="callFailed_userBusy" msgid="8851106999809294904">"Línan er upptekin"</string>
-    <string name="callFailed_congestion" msgid="8737761615702718375">"Símkerfið er upptekið"</string>
-    <string name="callFailed_timedOut" msgid="7590961703135543346">"Ekkert svar, rann út á tíma."</string>
-    <string name="callFailed_server_unreachable" msgid="2133506577423869729">"Ekki næst í þjóninn"</string>
-    <string name="callFailed_number_unreachable" msgid="7632566442515734778">"Ekki næst í númerið"</string>
-    <string name="callFailed_invalid_credentials" msgid="8226835346196775378">"Rangt notandanafn eða aðgangsorð"</string>
-    <string name="callFailed_out_of_network" msgid="8740943329772180507">"Hringt utan kerfis"</string>
-    <string name="callFailed_server_error" msgid="5717915213586193217">"Þjónsvilla. Reyndu aftur síðar."</string>
-    <string name="callFailed_noSignal" msgid="1889803273616031933">"Ekkert samband"</string>
-    <string name="callFailed_limitExceeded" msgid="4958065157970101491">"ACM-hámarki náð"</string>
-    <string name="callFailed_powerOff" msgid="2766035859391549713">"Slökkt á loftneti"</string>
-    <string name="callFailed_simError" msgid="4476360200030635828">"Ekkert SIM-kort eða villa á SIM-korti"</string>
-    <string name="callFailed_outOfService" msgid="682300184520329366">"Farsímakerfi ekki tiltækt"</string>
-    <string name="callFailed_fdn_only" msgid="2850204579765430641">"Fast númeraval lokar á hringd símtöl."</string>
-    <string name="callFailed_cb_enabled" msgid="3686963693629739680">"Ekki er hægt að hringja þegar kveikt er á útilokun símtala."</string>
-    <string name="callFailed_dsac_restricted" msgid="2180223622768522345">"Aðgangsstýring lokar á öll símtöl."</string>
-    <string name="callFailed_dsac_restricted_emergency" msgid="4353654268813314466">"Aðgangsstýring lokar á neyðarsímtöl."</string>
-    <string name="callFailed_dsac_restricted_normal" msgid="2680774510252408620">"Aðgangsstýring lokar á venjuleg símtöl."</string>
-    <string name="callFailed_unobtainable_number" msgid="4736290912891155067">"Ógilt númer"</string>
     <string name="confCall" msgid="1904840547188336828">"Símafundur"</string>
     <string name="call_lost" msgid="317670617901479594">"Símtalið slitnaði."</string>
     <string name="ok" msgid="3811371167865772377">"Í lagi"</string>
@@ -87,6 +68,8 @@
     <string name="notification_voicemail_no_vm_number" msgid="760963466895609716">"Talhólfsnúmer ekki þekkt"</string>
     <string name="notification_network_selection_title" msgid="4224455487793492772">"Ekkert símasamband"</string>
     <string name="notification_network_selection_text" msgid="2607085729661923269">"Valið símkerfi (<xliff:g id="OPERATOR_NAME">%s</xliff:g>) er ekki tiltækt"</string>
+    <!-- no translation found for notification_action_answer (6700362365135365143) -->
+    <skip />
     <string name="notification_action_end_call" msgid="6069460915123531620">"Leggja á"</string>
     <string name="notification_action_answer_video" msgid="7809271910870211729">"Myndskeið"</string>
     <string name="notification_action_answer_voice" msgid="1770796916369437773">"Tal"</string>
@@ -98,7 +81,7 @@
     <string name="incall_error_emergency_only" msgid="4678640422710818317">"Ekki skráð á símkerfi."</string>
     <string name="incall_error_out_of_service" msgid="8587993036435080418">"Farsímakerfi ekki tiltækt."</string>
     <string name="incall_error_no_phone_number_supplied" msgid="4197432103471807739">"Símtalið var ekki sent, gilt símanúmer var ekki slegið inn."</string>
-    <string name="incall_error_call_failed" msgid="4313552620858880999">"Símtalið var ekki sent."</string>
+    <string name="incall_error_call_failed" msgid="4313552620858880999">"Símtalið fór ekki í gegn."</string>
     <string name="incall_status_dialed_mmi" msgid="3672498861336189563">"Ræsir MMI-runu…"</string>
     <string name="incall_error_supp_service_unknown" msgid="2991054870745666038">"Óstudd þjónusta."</string>
     <string name="incall_error_supp_service_switch" msgid="3503552565745872241">"Ekki hægt að skipta milli símtala."</string>
@@ -107,7 +90,6 @@
     <string name="incall_error_supp_service_conference" msgid="2505727299596357312">"Ekki hægt að halda símafund."</string>
     <string name="incall_error_supp_service_reject" msgid="7055164130563826216">"Ekki hægt að hafna símtali."</string>
     <string name="incall_error_supp_service_hangup" msgid="7417583238334762737">"Ekki hægt að hringja."</string>
-    <string name="incall_error_missing_voicemail_number" msgid="2995137160077097934">"Talhólfsnúmer óþekkt."</string>
     <string name="incall_call_type_label_sip" msgid="4931428719494190371">"SIP-símtal"</string>
     <string name="emergency_enable_radio_dialog_title" msgid="4627849966634578257">"Neyðarsímtal"</string>
     <string name="emergency_enable_radio_dialog_message" msgid="207613549344420291">"Kveikir á loftneti…"</string>
@@ -190,5 +172,4 @@
     <string name="preference_category_ringtone" msgid="5197960752529332721">"Hringitónn og titringur"</string>
     <string name="manageConferenceLabel" msgid="4691922394301969053">"Stjórna símafundi"</string>
     <string name="emergency_call_dialog_number_for_display" msgid="8373041754188879871">"Neyðarnúmer"</string>
-    <string name="select_account_dialog_title" msgid="5730339500156684204">"Velja reikning"</string>
 </resources>
