--- a/InCallUI/res/values-pl/strings.xml
+++ b/InCallUI/res/values-pl/strings.xml
@@ -68,6 +68,7 @@
     <string name="notification_voicemail_no_vm_number" msgid="760963466895609716">"Nieznany numer poczty głosowej"</string>
     <string name="notification_network_selection_title" msgid="4224455487793492772">"Brak usługi"</string>
     <string name="notification_network_selection_text" msgid="2607085729661923269">"Wybrana sieć (<xliff:g id="OPERATOR_NAME">%s</xliff:g>) jest niedostępna"</string>
+    <string name="notification_action_answer" msgid="6700362365135365143">"Odbierz"</string>
     <string name="notification_action_end_call" msgid="6069460915123531620">"Rozłącz"</string>
     <string name="notification_action_answer_video" msgid="7809271910870211729">"Rozmowa wideo"</string>
     <string name="notification_action_answer_voice" msgid="1770796916369437773">"Głos"</string>
