--- a/InCallUI/res/values-si-rLK/strings.xml
+++ b/InCallUI/res/values-si-rLK/strings.xml
@@ -22,25 +22,6 @@
     <string name="unknown" msgid="6878797917991465859">"නොදනී"</string>
     <string name="private_num" msgid="6713286113000232309">"පුද්ගලික අංකය"</string>
     <string name="payphone" msgid="1931775086311769314">"ගෙවුම් දුරකථනය"</string>
-    <string name="callFailed_userBusy" msgid="8851106999809294904">"ඇමතුම කාර්ය බහුලයි"</string>
-    <string name="callFailed_congestion" msgid="8737761615702718375">"ජාලය කාර්ය බහුලයි"</string>
-    <string name="callFailed_timedOut" msgid="7590961703135543346">"ප්‍රතිචාරයක් නැත, කල් ඉකුත්ව ඇත"</string>
-    <string name="callFailed_server_unreachable" msgid="2133506577423869729">"සේවාදායකය ළඟා විය නොහැක"</string>
-    <string name="callFailed_number_unreachable" msgid="7632566442515734778">"අංකය ළඟා විය නොහැක"</string>
-    <string name="callFailed_invalid_credentials" msgid="8226835346196775378">"වැරදි පරිශීලක නාමයක් හෝ මුරපදයකි"</string>
-    <string name="callFailed_out_of_network" msgid="8740943329772180507">"අමතන ලද්දේ ජාලයෙන් පිටිනි"</string>
-    <string name="callFailed_server_error" msgid="5717915213586193217">"සේවාදායකයේ දෝෂයක්. පසුව නැවත උත්සාහ කරන්න."</string>
-    <string name="callFailed_noSignal" msgid="1889803273616031933">"සංඥාවක් නැත"</string>
-    <string name="callFailed_limitExceeded" msgid="4958065157970101491">"ACM සීමාව ඉක්මවන ලදි"</string>
-    <string name="callFailed_powerOff" msgid="2766035859391549713">"රේඩියෝව අක්‍රියයි"</string>
-    <string name="callFailed_simError" msgid="4476360200030635828">"SIM නැත හෝ SIM දෝෂයක්"</string>
-    <string name="callFailed_outOfService" msgid="682300184520329366">"ජංගම ජාලය නොමැත"</string>
-    <string name="callFailed_fdn_only" msgid="2850204579765430641">"FDN මඟින් පිටතට යන ඇමතුම් නවත්වා ඇත."</string>
-    <string name="callFailed_cb_enabled" msgid="3686963693629739680">"ඇමතුම් අත්හිටුවීමක් ඇතිවිට ඔබට පිටතට ඇමතුම් ගත නොහැක."</string>
-    <string name="callFailed_dsac_restricted" msgid="2180223622768522345">"ප්‍රවේශ පාලකය මඟින් සියලුම ඇමතුම් අත්හිටුවා ඇත."</string>
-    <string name="callFailed_dsac_restricted_emergency" msgid="4353654268813314466">"ප්‍රවේශ පාලකය මඟින් හදිසි ඇමතුම් අත්හිටුවා ඇත."</string>
-    <string name="callFailed_dsac_restricted_normal" msgid="2680774510252408620">"ප්‍රවේශ පාලකය මඟින් සාමාන්‍ය ඇමතුම් අත්හිටුවා ඇත."</string>
-    <string name="callFailed_unobtainable_number" msgid="4736290912891155067">"අවලංගු අංකය"</string>
     <string name="confCall" msgid="1904840547188336828">"සම්මන්ත්‍රණ ඇමතුම"</string>
     <string name="call_lost" msgid="317670617901479594">"ඇමතුම බිදවැටුණි."</string>
     <string name="ok" msgid="3811371167865772377">"හරි"</string>
@@ -87,6 +68,8 @@
     <string name="notification_voicemail_no_vm_number" msgid="760963466895609716">"හඬතැපැල් අංකය නොදනී"</string>
     <string name="notification_network_selection_title" msgid="4224455487793492772">"සේවාව නැත"</string>
     <string name="notification_network_selection_text" msgid="2607085729661923269">"තෝරා ඇති ජාලය (<xliff:g id="OPERATOR_NAME">%s</xliff:g>) නොමැත"</string>
+    <!-- no translation found for notification_action_answer (6700362365135365143) -->
+    <skip />
     <string name="notification_action_end_call" msgid="6069460915123531620">"විසන්ධි කරන්න"</string>
     <string name="notification_action_answer_video" msgid="7809271910870211729">"වීඩියෝව"</string>
     <string name="notification_action_answer_voice" msgid="1770796916369437773">"හඬ"</string>
@@ -107,7 +90,6 @@
     <string name="incall_error_supp_service_conference" msgid="2505727299596357312">"සම්මන්ත්‍රණ ඇමතුම් ලබාගත නොහැකි විය."</string>
     <string name="incall_error_supp_service_reject" msgid="7055164130563826216">"ඇමතුම ප්‍රතික්ෂේප කළ නොහැකි විය."</string>
     <string name="incall_error_supp_service_hangup" msgid="7417583238334762737">"ඇමතුම(ම්) නිදහස් කිරීමට නොහැකි විය."</string>
-    <string name="incall_error_missing_voicemail_number" msgid="2995137160077097934">"හඬ තැපැල් අංකය නොදනී."</string>
     <string name="incall_call_type_label_sip" msgid="4931428719494190371">"SIP ඇමතුම"</string>
     <string name="emergency_enable_radio_dialog_title" msgid="4627849966634578257">"හදිසි ඇමතුම"</string>
     <string name="emergency_enable_radio_dialog_message" msgid="207613549344420291">"රේඩියෝව ආරම්භ කරමින්…"</string>
@@ -128,8 +110,7 @@
     <string name="onscreenMergeCallsText" msgid="6640195098064538950">"ඇමතුම් එකට මුසු කරන්න"</string>
     <string name="onscreenSwapCallsText" msgid="1602990689244030047">"මාරු කරන්න"</string>
     <string name="onscreenManageCallsText" msgid="5473231160123254154">"ඇමතුම් කළමනාකරණය කරන්න"</string>
-    <!-- no translation found for onscreenManageConferenceText (6801708317570467407) -->
-    <skip />
+    <string name="onscreenManageConferenceText" msgid="6801708317570467407">"සම්මන්ත්‍රණ ඇමතුම කළමනාකරණය කරන්න"</string>
     <string name="onscreenAudioText" msgid="1710087112800041743">"ශ්‍රව්‍ය"</string>
     <string name="onscreenVideoCallText" msgid="4800924186056115442">"වීඩියෝ ඇමතුම"</string>
     <string name="onscreenChangeToVoiceText" msgid="5311407863653867937">"හඬ ඇමතුමක් වෙත මාරු කරන ලදි"</string>
@@ -191,5 +172,4 @@
     <string name="preference_category_ringtone" msgid="5197960752529332721">"රිගින් ටෝන් සහ කම්පනය කරන්න"</string>
     <string name="manageConferenceLabel" msgid="4691922394301969053">"සම්මන්ත්‍රණ ඇමතුම කළමනාකරණය කරන්න"</string>
     <string name="emergency_call_dialog_number_for_display" msgid="8373041754188879871">"හදිසි ඇමතුම් අංකය"</string>
-    <string name="select_account_dialog_title" msgid="5730339500156684204">"ගිණුම තෝරන්න"</string>
 </resources>
