--- a/InCallUI/res/values-zu/strings.xml
+++ b/InCallUI/res/values-zu/strings.xml
@@ -68,6 +68,7 @@
     <string name="notification_voicemail_no_vm_number" msgid="760963466895609716">"Inombolo yevoyisimeyili ayaziwa"</string>
     <string name="notification_network_selection_title" msgid="4224455487793492772">"Ayikho isevisi"</string>
     <string name="notification_network_selection_text" msgid="2607085729661923269">"Inethiwekhi ekhethiwe <xliff:g id="OPERATOR_NAME">%s</xliff:g> ayitholakali"</string>
+    <string name="notification_action_answer" msgid="6700362365135365143">"Phendula"</string>
     <string name="notification_action_end_call" msgid="6069460915123531620">"Vala ikholi"</string>
     <string name="notification_action_answer_video" msgid="7809271910870211729">"Ividiyo"</string>
     <string name="notification_action_answer_voice" msgid="1770796916369437773">"Izwi"</string>
