--- a/res/values-hi/strings.xml
+++ b/res/values-hi/strings.xml
@@ -34,26 +34,26 @@
     <string name="clearCallLogConfirmation" msgid="5043563133171583152">"आपके सभी कॉल रिकॉर्ड हटा दिए जाएंगे."</string>
     <string name="clearCallLogProgress_title" msgid="8365943000154295771">"कॉल लॉग साफ़ हो रहा है..."</string>
   <plurals name="notification_voicemail_title">
-    <item quantity="one" msgid="1746619685488504230">"ध्वनिमेल"</item>
+    <item quantity="one" msgid="1746619685488504230">"वॉयस मेल"</item>
     <item quantity="other" msgid="5513481419205061254">"<xliff:g id="COUNT">%1$d</xliff:g> ध्‍वनिमेल"</item>
   </plurals>
     <string name="notification_action_voicemail_play" msgid="6113133136977996863">"चलाएं"</string>
     <string name="notification_voicemail_callers_list" msgid="1153954809339404149">"<xliff:g id="NEWER_CALLERS">%1$s</xliff:g>, <xliff:g id="OLDER_CALLER">%2$s</xliff:g>"</string>
     <string name="notification_new_voicemail_ticker" msgid="895342132049452081">"<xliff:g id="CALLER">%1$s</xliff:g> की ओर से नया ध्‍वनिमेल"</string>
-    <string name="voicemail_playback_error" msgid="1811242131549854624">"ध्वनिमेल नहीं चलाया जा सका."</string>
+    <string name="voicemail_playback_error" msgid="1811242131549854624">"वॉयस मेल नहीं चलाया जा सका."</string>
     <string name="voicemail_buffering" msgid="738287747618697097">"बफ़र हो रहा है…"</string>
     <string name="voicemail_fetching_content" msgid="877911315738258780">"ध्‍वनिमेल फ़ेच कर रहा है…"</string>
     <string name="voicemail_fetching_timout" msgid="6691792377574905201">"ध्‍वनिमेल फ़ेच नहीं किया जा सका."</string>
-    <string name="call_log_voicemail_header" msgid="3945407886667089173">"केवल ध्वनिमेल वाले कॉल"</string>
+    <string name="call_log_voicemail_header" msgid="3945407886667089173">"केवल वॉयस मेल वाले कॉल"</string>
     <string name="call_log_incoming_header" msgid="2787722299753674684">"केवल इनकमिंग कॉल"</string>
     <string name="call_log_outgoing_header" msgid="761009180766735769">"केवल आउटगोइंग कॉल"</string>
     <string name="call_log_missed_header" msgid="8017148056610855956">"केवल छूटे कॉल"</string>
     <string name="voicemail_status_voicemail_not_available" msgid="3021980206152528883">"ध्‍वनि‍मेल सर्वर से कनेक्‍ट नहीं हो सकता."</string>
     <string name="voicemail_status_messages_waiting" msgid="7113421459602803605">"ध्‍वनिमेल सर्वर से कनेक्‍ट नहीं हो सकता. नए ध्‍वनिमेल प्रतीक्षा में हैं."</string>
-    <string name="voicemail_status_configure_voicemail" msgid="3738537770636895689">"अपना ध्वनिमेल सेट करें."</string>
+    <string name="voicemail_status_configure_voicemail" msgid="3738537770636895689">"अपना वॉयस मेल सेट करें."</string>
     <string name="voicemail_status_audio_not_available" msgid="3369618334553341626">"ऑडि‍यो उपलब्‍ध नहीं."</string>
     <string name="voicemail_status_action_configure" msgid="8671796489912239589">"सेट करें"</string>
-    <string name="voicemail_status_action_call_server" msgid="1824816252288551794">"ध्वनिमेल कॉल करें"</string>
+    <string name="voicemail_status_action_call_server" msgid="1824816252288551794">"वॉयस मेल कॉल करें"</string>
     <string name="voicemail_speed_slowest" msgid="1733460666177707312">"सबसे धीमी गति"</string>
     <string name="voicemail_speed_slower" msgid="1508601287347216244">"धीमी गति"</string>
     <string name="voicemail_speed_normal" msgid="9033988544627228892">"सामान्य गति"</string>
@@ -110,7 +110,7 @@
     <string name="type_incoming_video" msgid="82323391702796181">"इनकमिंग वीडियो कॉल"</string>
     <string name="type_outgoing_video" msgid="2858140021680755266">"जावक वीडियो कॉल"</string>
     <string name="type_missed_video" msgid="954396897034220545">"छूटे वीडियो कॉल"</string>
-    <string name="type_voicemail" msgid="5153139450668549908">"ध्वनिमेल"</string>
+    <string name="type_voicemail" msgid="5153139450668549908">"वॉयस मेल"</string>
     <string name="actionIncomingCall" msgid="6028930669817038600">"इनकमिंग कॉल"</string>
     <string name="description_call_log_play_button" msgid="651182125650429846">"ध्‍वनिमेल चलाएं"</string>
     <string name="description_view_contact" msgid="5205669345700598415">"<xliff:g id="NAME">%1$s</xliff:g> संपर्क देखें"</string>
@@ -120,11 +120,11 @@
     <string name="description_num_calls" msgid="1601505153694540074">"<xliff:g id="NUMBEROFCALLS">%1$s</xliff:g> कॉल."</string>
     <string name="description_video_call" msgid="2933838090743214204">"वीडियो कॉल."</string>
     <string name="description_send_text_message" msgid="7803126439934046891">"<xliff:g id="NAME">%1$s</xliff:g> को लेख संदेश भेजें"</string>
-    <string name="description_call_log_unheard_voicemail" msgid="118101684236996786">"नहीं सुना गया ध्वनिमेल"</string>
+    <string name="description_call_log_unheard_voicemail" msgid="118101684236996786">"नहीं सुना गया वॉयस मेल"</string>
     <string name="description_start_voice_search" msgid="520539488194946012">"बोलकर खोजें शुरु करें"</string>
     <string name="menu_callNumber" msgid="997146291983360266">"<xliff:g id="NUMBER">%s</xliff:g> पर कॉल करें"</string>
     <string name="unknown" msgid="740067747858270469">"अज्ञात"</string>
-    <string name="voicemail" msgid="3851469869202611441">"ध्वनिमेल"</string>
+    <string name="voicemail" msgid="3851469869202611441">"वॉयस मेल"</string>
     <string name="private_num" msgid="6374339738119166953">"निजी नंबर"</string>
     <string name="payphone" msgid="4864313342828942922">"सशुल्क फ़ोन"</string>
     <string name="dialerKeyboardHintText" msgid="5401660096579787344">"डायल करने के लिए कीबोर्ड का उपयोग करें"</string>
@@ -138,31 +138,31 @@
     <string name="meid" msgid="6210568493746275750">"MEID"</string>
     <string name="simContacts_emptyLoading" msgid="6700035985448642408">"सिम कार्ड से लोड हो रहा है…"</string>
     <string name="simContacts_title" msgid="27341688347689769">"सिम कार्ड के संपर्क"</string>
-    <string name="add_contact_not_available" msgid="2731922990890769322">"इस सुविधा का उपयोग करने के लिए संपर्क ऐप्लिकेशन को पुनः सक्षम करें."</string>
+    <string name="add_contact_not_available" msgid="2731922990890769322">"इस सुविधा का उपयोग करने के लिए संपर्क ऐप्लिकेशन को फिर से सक्षम करें."</string>
     <string name="voice_search_not_available" msgid="7580616740587850828">"बोलकर खोजना उपलब्ध नहीं है."</string>
     <string name="call_not_available" msgid="8941576511946492225">"फ़ोन कॉल नहीं किया जा सकता क्योंकि फ़ोन ऐप्लिकेशन अक्षम कर दिया गया है."</string>
     <string name="activity_not_available" msgid="8265265380537872585">"चयनित कार्यवाही का प्रबंधन करने के लिए इंस्टॉल की गई कोई भी गतिविधि उपलब्ध नहीं है."</string>
     <string name="dialer_hint_find_contact" msgid="8798845521253672403">"नाम या फ़ोन नंबर लिखें"</string>
-    <string name="recentMissed_empty" msgid="4177320482947526015">"आपके पास हाल ही में छूटा हुआ कोई कॉल नहीं है."</string>
-    <string name="recentVoicemails_empty" msgid="4905583746647459963">"आपके पास हाल ही का कोई ध्वनिमेल नहीं है."</string>
+    <string name="recentMissed_empty" msgid="4177320482947526015">"आपके पास अभी कोई छूटा हुआ कोई कॉल नहीं है."</string>
+    <string name="recentVoicemails_empty" msgid="4905583746647459963">"आपके पास हाल ही का कोई वॉयस मेल नहीं है."</string>
     <string name="show_favorites_only" msgid="5520072531022614595">"केवल पसंदीदा दिखाएं"</string>
     <string name="call_log_activity_title" msgid="4612824396355272023">"इतिहास"</string>
     <string name="call_log_all_title" msgid="3566738938889333307">"सभी"</string>
     <string name="call_log_missed_title" msgid="4541142293870638971">"छूटे हुए"</string>
-    <string name="call_log_voicemail_title" msgid="940422274047025948">"ध्वनिमेल"</string>
+    <string name="call_log_voicemail_title" msgid="940422274047025948">"वॉयस मेल"</string>
     <string name="tab_speed_dial" msgid="7807567599021643864">"स्पीड डायल"</string>
     <string name="tab_recents" msgid="929949073851377206">"हाल ही के"</string>
     <string name="tab_all_contacts" msgid="1410922767166533690">"संपर्क"</string>
     <string name="favorite_hidden" msgid="5011234945140912047">"पसंदीदा से निकाल दिया गया"</string>
-    <string name="favorite_hidden_undo" msgid="2508998611039406474">"पूर्ववत करें"</string>
+    <string name="favorite_hidden_undo" msgid="2508998611039406474">"वापस लाएं"</string>
     <string name="search_shortcut_call_number" msgid="7277194656832895870">"<xliff:g id="NUMBER">%s</xliff:g> पर कॉल करें"</string>
     <string name="search_shortcut_add_to_contacts" msgid="1853716708655789069">"संपर्कों में जोड़ें"</string>
     <string name="search_shortcut_make_video_call" msgid="1265971685034465166">"वीडियो कॉल करें"</string>
     <string name="recents_footer_text" msgid="7315554578957453359">"पूर्ण काल ​​इतिहास देखें"</string>
     <string name="num_missed_calls" msgid="8081736535604293886">"<xliff:g id="NUMBER">%s</xliff:g>  छूटे हुए नए कॉल"</string>
-    <string name="speed_dial_empty" msgid="5476435149276295630">"स्पीड डायल उन \nपसंदीदा नंबरों के लिए\n केवल एक बार स्पर्श करके डायलिंग सुविधा है जिन्हें आप अक्सर कॉल करते हैं."</string>
+    <string name="speed_dial_empty" msgid="5476435149276295630">"स्पीड डायल उन नंबरों के लिए एक सुविधा है \n जिनको आप अक्सर कॉल करते हैं.\nकेवल एक बार स्पर्श करके डायल कर सकते हैं."</string>
     <string name="all_contacts_empty" msgid="4536082452651392894">"आपके पास कोई संपर्क नहीं है."</string>
-    <string name="contact_tooltip" msgid="7817483485692282287">"सभी नंबर देखने के लिए चित्र को टैप करें या पुनः क्रमित करने के लिए दबाए रखें"</string>
+    <string name="contact_tooltip" msgid="7817483485692282287">"सभी नंबर देखने के लिए चित्र को टैप करें या फिर से क्रमित करने के लिए दबाए रखें"</string>
     <string name="description_dismiss" msgid="2146276780562549643">"ख़ारिज करें"</string>
     <string name="remove_contact" msgid="1080555335283662961">"निकालें"</string>
     <string name="favorites_menu_all_contacts" msgid="992506284449891186">"सभी संपर्क"</string>
@@ -175,7 +175,7 @@
     <string name="description_outgoing_call" msgid="3964211633673659733">"किए जाने वाले कॉल का विवरण: <xliff:g id="NAMEORNUMBER">%1$s</xliff:g>, <xliff:g id="TYPEORLOCATION">%2$s</xliff:g>, <xliff:g id="TIMEOFCALL">%3$s</xliff:g>."</string>
     <string name="description_call_back_action" msgid="3012837380108884260">"वापस कॉल करें: <xliff:g id="NAMEORNUMBER">%1$s</xliff:g>"</string>
     <string name="description_video_call_action" msgid="4303952636480252389">"<xliff:g id="NAMEORNUMBER">%1$s</xliff:g> को वीडियो कॉल."</string>
-    <string name="description_voicemail_action" msgid="8054891873788903063">"<xliff:g id="NAMEORNUMBER">%1$s</xliff:g> की ध्वनिमेल सुनें"</string>
+    <string name="description_voicemail_action" msgid="8054891873788903063">"<xliff:g id="NAMEORNUMBER">%1$s</xliff:g> की वॉयस मेल सुनें"</string>
     <string name="description_details_action" msgid="2433827152749491785">"<xliff:g id="NAMEORNUMBER">%1$s</xliff:g> के कॉल विवरण"</string>
     <string name="toast_entry_removed" msgid="3389119736202317999">"कॉल लॉग प्रविष्टि हटा दी गई."</string>
     <string name="toast_caller_id_reported" msgid="1127087402649645557">"संपर्क की रिपोर्ट की गई."</string>
@@ -191,14 +191,14 @@
     <string name="voicemail_play_start_pause" msgid="3687447935787768983">"प्लेबैक प्रारंभ करें या रोकें."</string>
     <string name="list_delimeter" msgid="4571593167738725100">", "</string>
     <string name="general_settings_label" msgid="4787443826763795004">"सामान्य सेटिंग"</string>
-    <string name="general_settings_description" msgid="4838560696004337578">"संपर्क प्रदर्शन, ध्वनि और त्वरित प्रतिसाद"</string>
+    <string name="general_settings_description" msgid="4838560696004337578">"संपर्क प्रदर्शन, ध्वनि और झटपट उत्तर"</string>
     <string name="contact_display_options_category_title" msgid="5719485933817512769">"संपर्क प्रदर्शन के विकल्प"</string>
     <string name="sounds_and_vibrate_category_title" msgid="7589787045192519254">"ध्वनि और कंपन"</string>
     <string name="ringtone_title" msgid="760362035635084653">"फ़ोन रिंगटोन"</string>
     <string name="vibrate_on_ring_title" msgid="3362916460327555241">"कॉल के लिए भी कंपन"</string>
     <string name="dtmf_tone_enable_title" msgid="6571449695997521615">"डायलपैड टोन"</string>
     <string name="other_settings_title" msgid="7976283601445863248">"अन्य"</string>
-    <string name="respond_via_sms_setting_title" msgid="1318281521087951580">"त्वरित प्रतिसाद"</string>
+    <string name="respond_via_sms_setting_title" msgid="1318281521087951580">"झटपट उत्तर"</string>
     <string name="call_settings_label" msgid="7416182166943714852">"कॉल सेटिंग"</string>
-    <string name="call_settings_description" msgid="2756622428019213052">"ध्वनिमेल, प्रतीक्षारत कॉल, और अन्य"</string>
+    <string name="call_settings_description" msgid="2756622428019213052">"वॉयस मेल, प्रतीक्षारत कॉल, और अन्य"</string>
 </resources>
