--- a/InCallUI/res/values-mr-rIN/strings.xml
+++ b/InCallUI/res/values-mr-rIN/strings.xml
@@ -28,7 +28,7 @@
     <string name="audio_mode_speaker" msgid="27649582100085266">"स्पीकर"</string>
     <string name="audio_mode_earpiece" msgid="4156527186373869107">"हँडसेट इअरपीस"</string>
     <string name="audio_mode_wired_headset" msgid="1465350758489175975">"वायर्ड हेडसेट"</string>
-    <string name="audio_mode_bluetooth" msgid="3047641300848211128">"Bluetooth"</string>
+    <string name="audio_mode_bluetooth" msgid="3047641300848211128">"ब"</string>
     <string name="wait_prompt_str" msgid="7601815427707856238">"खालील टोन पाठवायचे?\n"</string>
     <string name="pause_prompt_str" msgid="1789964702154314806">"टोन पाठवित आहे\n"</string>
     <string name="send_button" msgid="4106860097497818751">"पाठवा"</string>
@@ -144,7 +144,7 @@
     <string name="accessibility_speakerphone_selected" msgid="4389354567657833468">"स्पीकरफोन निवडला"</string>
     <string name="accessibility_earpiece_selected" msgid="5749525199671068663">"इअरपिस निवडला"</string>
     <string name="accessibility_wired_headset_selected" msgid="2984920743124263932">"तार असलेला हेडसेट निवडला"</string>
-    <string name="accessibility_bluetooth_headset_selected" msgid="2785473629292181736">"Bluetooth हेडसेट निवडला"</string>
+    <string name="accessibility_bluetooth_headset_selected" msgid="2785473629292181736">"ब हेडसेट निवडला"</string>
     <string name="accessibility_call_muted" msgid="2776111226185342220">"कॉल नि.शब्‍द केला."</string>
     <string name="accessibility_call_unmuted" msgid="7496527089753980871">"कॉल सशब्द केला."</string>
     <string name="accessibility_call_put_on_hold" msgid="4226100429657528833">"कॉल होल्डवर ठेवला."</string>
