--- a/InCallUI/res/values-bg/strings.xml
+++ b/InCallUI/res/values-bg/strings.xml
@@ -68,8 +68,7 @@
     <string name="notification_voicemail_no_vm_number" msgid="760963466895609716">"Неизвестен номер за гласова поща"</string>
     <string name="notification_network_selection_title" msgid="4224455487793492772">"Няма покритие"</string>
     <string name="notification_network_selection_text" msgid="2607085729661923269">"Избраната мрежа (<xliff:g id="OPERATOR_NAME">%s</xliff:g>) не е налична"</string>
-    <!-- no translation found for notification_action_answer (6700362365135365143) -->
-    <skip />
+    <string name="notification_action_answer" msgid="6700362365135365143">"Отговор"</string>
     <string name="notification_action_end_call" msgid="6069460915123531620">"Затваряне"</string>
     <string name="notification_action_answer_video" msgid="7809271910870211729">"Видеообаждане"</string>
     <string name="notification_action_answer_voice" msgid="1770796916369437773">"Гласово обаждане"</string>
