--- a/InCallUI/res/values-ml-rIN/strings.xml
+++ b/InCallUI/res/values-ml-rIN/strings.xml
@@ -28,7 +28,7 @@
     <string name="audio_mode_speaker" msgid="27649582100085266">"സ്പീക്കർ"</string>
     <string name="audio_mode_earpiece" msgid="4156527186373869107">"ഹാൻഡ്‌സെറ്റ് ഇയർപീസ്"</string>
     <string name="audio_mode_wired_headset" msgid="1465350758489175975">"വയർ മുഖേന ബന്ധിപ്പിച്ച ഹെഡ്‌സെറ്റ്"</string>
-    <string name="audio_mode_bluetooth" msgid="3047641300848211128">"Bluetooth"</string>
+    <string name="audio_mode_bluetooth" msgid="3047641300848211128">"ബ്ലൂടൂത്ത്"</string>
     <string name="wait_prompt_str" msgid="7601815427707856238">"ഇനിപ്പറയുന്ന ടോണുകൾ അയയ്‌ക്കണോ?\n"</string>
     <string name="pause_prompt_str" msgid="1789964702154314806">"ടോണുകൾ അയയ്‌ക്കുന്നു\n"</string>
     <string name="send_button" msgid="4106860097497818751">"അയയ്‌ക്കുക"</string>
@@ -76,7 +76,7 @@
     <string name="notification_action_dismiss" msgid="2679969397930852858">"നിരസിക്കുക"</string>
     <string name="notification_missedCall_call_back" msgid="2684890353590890187">"കോൾബാക്ക്"</string>
     <string name="notification_missedCall_message" msgid="3049928912736917988">"സന്ദേശം"</string>
-    <string name="incall_error_power_off" msgid="6550191216405193368">"ഒരു കോൾ വിളിക്കാൻ, ആദ്യം വിമാന മോഡ് ഓഫുചെയ്യുക."</string>
+    <string name="incall_error_power_off" msgid="6550191216405193368">"ഒരു കോൾ വിളിക്കാൻ, ആദ്യം ഫ്ലൈറ്റ് മോഡ് ഓഫുചെയ്യുക."</string>
     <string name="incall_error_emergency_only" msgid="4678640422710818317">"നെറ്റ്‌വർക്കിൽ രജിസ്റ്റർ ചെയ്‌തിട്ടില്ല."</string>
     <string name="incall_error_out_of_service" msgid="8587993036435080418">"മൊബൈൽ നെറ്റ്‌വർക്ക് ലഭ്യമല്ല."</string>
     <string name="incall_error_no_phone_number_supplied" msgid="4197432103471807739">"കോൽ ചെയ്യാനായില്ല. സാധുവായ നമ്പറൊന്നും നൽകിയില്ല."</string>
@@ -145,7 +145,7 @@
     <string name="accessibility_speakerphone_selected" msgid="4389354567657833468">"സ്‌പീക്കർഫോൺ തിരഞ്ഞെടുത്തു"</string>
     <string name="accessibility_earpiece_selected" msgid="5749525199671068663">"ഇയർഫോൺ തിരഞ്ഞെടുത്തു"</string>
     <string name="accessibility_wired_headset_selected" msgid="2984920743124263932">"വയർ മുഖേന ബന്ധിപ്പിച്ച ഹെഡ്‌സെറ്റ് തിരഞ്ഞെടുത്തു"</string>
-    <string name="accessibility_bluetooth_headset_selected" msgid="2785473629292181736">"Bluetooth ഹെഡ്‌സെറ്റ് തിരഞ്ഞെടുത്തു"</string>
+    <string name="accessibility_bluetooth_headset_selected" msgid="2785473629292181736">"ബ്ലൂടൂത്ത് ഹെഡ്‌സെറ്റ് തിരഞ്ഞെടുത്തു"</string>
     <string name="accessibility_call_muted" msgid="2776111226185342220">"കോൾ നിശബ്‌ദമാക്കി."</string>
     <string name="accessibility_call_unmuted" msgid="7496527089753980871">"കോൾ അൺ‌മ്യൂട്ടുചെയ്‌തു."</string>
     <string name="accessibility_call_put_on_hold" msgid="4226100429657528833">"കോൾ ഹോൾഡുചെയ്‌തു."</string>
